# libmailparse

./: .gitignore  CMakeLists.txt
src/: library.c  library.h
test/: main.cpp
